Voyager-2022 cname added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voyager-2022",
-  "homepage": "voyager.vit.edu.in",
+  "homepage": "https://ieee.vit.edu.in/VOYAGER20/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
