--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "gh-pages": "^3.2.3",
     "gsap": "^3.9.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
