Voyager-2022 v1-event info bug fixes-1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "voyager-2022",
-  "homepage": "/",
+  "publicPath": "/",
+  "historyApiFallback": true,
   "version": "0.1.0",
   "private": true,
   "dependencies": {
