Voyager-2022 v1-event info bug fixes-routes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "voyager-2022",
-  "publicPath": "/",
-  "historyApiFallback": true,
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
